# outpostkit-python

./: .deepsource.toml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  template.py
.github/workflows/: ci.yaml  release.yaml
__tests__/: __main__.py
examples/: sentence-similarity.py
examples/endpoints/: sentence-similarity.py
examples/finetunings/: Readme.md  clm.py
outpost/: __init__.py  client.py  collection.py  constants.py  deployment.py  exceptions.py  files.py  hardware.py  identifier.py  inference.py  json.py  model.py  pagination.py  prediction.py  resource.py  run.py  stream.py  training.py  version.py
outpostkit/: __about__.py  __init__.py  base_handler.py  client.py  collection.py  constants.py  deployment.py  endpoints.py  exceptions.py  finetuning.py  hardware.py  identifier.py  inference.py  logger.py  model.py  pagination.py  prediction.py  predictor.py  repository.py  resource.py  run.py  schema.py  stream.py  team.py  training.py  user.py  utils.py  version.py  vllm.py
outpostkit/_types/: endpoint.py  entity.py  finetuning.py  inference.py  repository.py  team.py  user.py
outpostkit/_utils/: __init__.py  constants.py  finetuning.py  git.py  import_utils.py
outpostkit/git/lfs/: transfer.py  types.py
outpostkit/inference/: gen.py
outpostkit/inference/helpers/: json.py
outpostkit/inference/templates/: __init__.py  audio_classification.py
outpostkit/inference/utils/: repo.py
outpostkit/repository/: __init__.py  download.py
outpostkit/repository/lfs/: client.py  exc.py  logger.py  transfer.py  types.py
outpostkit/template_gen/: gen.py
outpostkit/template_gen/helpers/: form.py
outpostkit/template_gen/templates/: audio_classification.py  automatic_speech_recognition.py  common.py  conversational.py  depth_estimation.py  document_question_answering.py  feature_extraction.py  fill_mask.py  image_classification.py  image_segmentation.py  image_to_image.py  image_to_text.py  mask_generation.py  object_detection.py  question_answering.py  summarization.py  table_question_answering.py  text2text_generation.py  text_classification.py  text_generation.py  text_to_audio.py  token_classification.py  utils.py  (+7 more)
script/: lint
(+6 files in other folders)
