[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outpostkit"
version = "0.0.35"
description = "Python client for Outpost"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Outpost Innovations, Inc." }]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.21.0,<1",
    "packaging",
    "pydantic>1",
    "typing_extensions>=4.5.0",
]
optional-dependencies = { dev = [
    "pylint",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "pytest-recording",
    "respx",
    "ruff",
] }

[project.urls]
homepage = "https://outpost.run"
repository = "https://github.com/outposthq/outpostkit-python"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.setuptools]
packages = ["outpostkit","outpostkit._types"]

[tool.setuptools.package-data]
"outpostkit" = ["py.typed"]

[tool.pylint.main]
disable = [
    "C0301", # Line too long
    "C0413", # Import should be placed at the top of the module
    "C0114", # Missing module docstring
    "R0801", # Similar lines in N files
    "W0212", # Access to a protected member
    "W0622", # Redefining built-in
    "R0903", # Too few public methods
]
good-names = ["id"]

[tool.ruff]
select = [
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warning
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "ANN", # flake8-annotations
]
ignore = [
    "E501",   # Line too long
    "S113",   # Probable use of requests call without timeout
    "ANN001", # Missing type annotation for function argument
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN101", # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "W191",   # Indentation contains tabs
]

[tool.ruff.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert
    "S106",   # Possible use of hard-coded password function arguments
    "ANN201", # Missing return type annotation for public function
]
